--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -13,6 +13,8 @@ jobs:
     - name: set up JDK 1.8
       uses: actions/setup-java@v1
       with:
-        java-version: 1.8
+        java-version: 1.8 
+    - name: Change execution permission in gradlew file
+      run: chmod +x ./calculadora/gradlew  
     - name: Build with Gradle
       run: ./calculadora/gradlew build
