--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -18,3 +18,11 @@ jobs:
       run: chmod +x ./calculadora/gradlew  
     - name: Build with Gradle
       run: ./calculadora/gradlew build
+    - name: Build & Debug apx
+      run: ./calculadora/gradlew assembleDebug
+    - name: Releasing using hub
+      uses: DanielGiraldoMontes/calculadora@master
+      env:
+            GITHUB_TOKEN: ${{ secrets.TOKEN }}
+            APP_FOLDER: app
+            RELEASE_TITLE: New Build  
