--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -18,9 +18,10 @@ jobs:
       run: chmod +x ./calculadora/gradlew  
     - name: Build with Gradle
       run: ./calculadora/gradlew build
-    - name: Releasing using hub
-      uses: DanielGiraldoMontes/calculadora@master
-      env:
-            GITHUB_TOKEN: ${{ secrets.TOKEN }}
-            APP_FOLDER: calculadora/app
-            RELEASE_TITLE: New Build  
+    - name: Build debug APK
+      run: bash ./gradlew assembleDebug --stacktrace
+    - name: Upload APK
+      uses: actions/upload-artifact@v1
+      with:
+        name: app
+        path: calculadora/app/build/outputs/apk/debug/app-debug.apk
