--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Build with Gradle
       run: ./calculadora/gradlew build
     - name: Build debug APK
-      run: bash ./gradlew assembleDebug --stacktrace
+      run: bash ./calculadora/gradlew assembleDebug --stacktrace
     - name: Upload APK
       uses: actions/upload-artifact@v1
       with:
